--- a/play.ipynb
+++ b/play.ipynb
@@ -616,7 +616,7 @@
     "Commits again are just objects in Git. So when we're dealing with commit as objects in git, they will have the type header, size, followed by the content of the object. Assume that we extracted out the headers and the size. What does the content of the object look like?\n",
     "\n",
     "```shell\n",
-    "tree 29ff16c9c14e2652b22f8b78bb08a5a07930c147 # key value pairs that are not followed by key value pairs\n",
+    "tree 29ff16c9c14e2652b22f8b78bb08a5a07930c147\n",
     "parent 206941306e8a8af65b66eaaaea388a7ae24d49a0\n",
     "author Thibault Polge <thibault@thb.lt> 1527025023 +0200\n",
     "committer Thibault Polge <thibault@thb.lt> 1527025044 +0200\n",
@@ -1172,6 +1172,236 @@
     "\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Refs\n",
+    "\n",
+    "We generally want to refer to commits by their branch name instead of a hash. So how do we do this? We maintain a mapping between the branch name and it's hash. These are references.\n",
+    "\n",
+    "Directories in the `.git/refs/` store the references. Refs are simple text files that contain hexadecimal representations in ASCII.\n",
+    "\n",
+    "The references may be direct i.e. referring to some commit:\n",
+    "`6071c08bcb4757d8c89a30d9755d2466cef8c1de`\n",
+    "\n",
+    "Or they could be indirect where they refer to another reference as follows:\n",
+    "`ref: refs/remotes/origin/master`\n",
+    "\n",
+    "The indirect ref is a path in the `.git/refs` directory which will hold the direct reference.\n",
+    "\n",
+    "So in terms of implementation, what is it that we want to achieve? Given a reference such as a branch name, we want to find out the SHA-1 hash for it and then find out the object. Since refs can be indirect also, it makes sense to write a recursive resolve function that finds us the SHA-1 identifier.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ref_resolve(repo, ref):\n",
+    "    path = repo_file(repo, ref)\n",
+    "\n",
+    "    # The case where a reference may be broken. E.g. when the repo is new and no commits\n",
+    "    # or also the case of dangling heads\n",
+    "    if not os.path.isfile(path):\n",
+    "        return None\n",
+    "    \n",
+    "    with open(path, 'r') as fp:\n",
+    "        data = fp.read()[:-1] # last char is the newline which we can drop\n",
+    "    \n",
+    "    # recursive resolve\n",
+    "    if data.startswith('ref: '):\n",
+    "        return ref_resolve(repo, data[5:])\n",
+    "    else:\n",
+    "        return data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## show-ref Command\n",
+    "\n",
+    "The `show-ref` command lists all the references that are present in the repo. So to implement this, we would need to recursively go over all the files and folders of the `.git/refs/` and return a response. Similar to git, we will return the refs in a sorted order.\n",
+    "\n",
+    "Also, since the output of the command is as follows:\n",
+    "`[sha-1 hash] [path from refs directory]`, we are writing a helper function to format the output properly."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ref_list(repo, path=None):\n",
+    "    if not path:\n",
+    "        path = repo_dir(repo, 'refs')\n",
+    "    ret = dict()\n",
+    "\n",
+    "    for f in sorted(os.listdir(path)):\n",
+    "        can = os.path.join(path, f)\n",
+    "\n",
+    "        # When we encounter a subdirectory (e.g. main or remote), recurse\n",
+    "        if os.path.isdir(can):\n",
+    "            ret[f] =  ref_list(repo, can)\n",
+    "        # When a ref file, get the SHA-1 hash from the files\n",
+    "        else:\n",
+    "            ret[f] = ref_resolve(repo, can)\n",
+    "\n",
+    "    return ret\n",
+    "\n",
+    "argsp = argsubparsers.add_parser('show-ref', help='List references')\n",
+    "\n",
+    "def cmd_show_ref(args):\n",
+    "    repo = repo_find()\n",
+    "    refs = ref_list(repo)\n",
+    "    show_ref(repo, refs, prefix='refs')\n",
+    "\n",
+    "\n",
+    "# Not super nice code. But if need be, can bed worked out. Formatting the output basically.\n",
+    "def show_ref(repo, refs, with_hash=True, prefix=''):\n",
+    "    for k, v in refs.items():\n",
+    "        if type(v) == str:\n",
+    "            print(f\"{' ' if with_hash else ''}{'/' if prefix else ''}{k}\")\n",
+    "        else:\n",
+    "            show_ref(repo, v, with_hash=with_hash, prefix=f\"{prefix}{'/' if prefix else ''}{k}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Tags\n",
+    "\n",
+    "Before understanding why need tags, let's inspect the directory `.git/refs/`. Typically, this directory has the following subdirectories:\n",
+    "\n",
+    "1. `/heads/`: The references to the *latest* commit for all branches in local\n",
+    "2. `/remotes/`: The references to the *latest* commit for all branches in local\n",
+    "\n",
+    "From the above structure, it can be seen that if we want to store a reference to a particular commit (for example, if a specific commit is your version 2), then we need one more directory. \n",
+    "\n",
+    "3. `/tags/`\n",
+    "\n",
+    "Tags are a one type of references. They let us refer to any object in git via a name. Most common use case being the versioning.\n",
+    "\n",
+    "*Note:* Along with the above three directories, there may be other directories such as `/stash/` or `/replace/`, but for our simple WYAG, the three suffice."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "One Important Thing to Notice:\n",
+    "\n",
+    "There are tag objects and there are references which are called lightweight tags. These two are related but two different things in terms of implementation. \n",
+    "\n",
+    "The tags which store reference to some other object are *lightweight tags*. They are simple text files containing the hash of the object they refer to. These live in `.git/refs/tags/` directory.\n",
+    "\n",
+    "\n",
+    "Then there are annotated tags. Annotated tags are again SHA-1 hashes that also live in `.git/refs/tags/` directory. But these SHA-1 hashes point to a tag object in `.git/objects/` directory. These tag objects are key-value pairs very similar to GitCommit object we created above. They contain some metadata along with the tag. This is a sample output from a tag object:\n",
+    "\n",
+    "```\n",
+    "object 28e59dc79ec2e74b950c2f4c39e5679201cb2fdc\n",
+    "type commit\n",
+    "tag v2\n",
+    "tagger vikrantmehta123 <vikrantmehta123@gmail.com> 1738416532 +0530\n",
+    "\n",
+    "Version 2.0 release\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Our code for GitCommit object can be reused here! So we only need to change the name of the object and we can use it as is."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class GitTag(GitCommit):\n",
+    "    fmt = b'tag'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, coming to the implementation: what is it that we want to implement? We want to implement both functionalities-lightweight and annotated tags. Both should have the same command but arguments can differ. One creats a simple ref and the other creates a tag object in `.git/objects/`. Here's what we want:\n",
+    "\n",
+    "\n",
+    "1. `git tag`: lists all the tags\n",
+    "2. `git tag NAME [OBJECT]`: create a new *lightweight* tag NAME, pointing at HEAD (default) or OBJECT\n",
+    "3. `git tag -a NAME [OBJECT]`: create a new tag object with the NAME pointing to OBJECT or HEAD by default."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "argsp = argsubparsers.add_parser('tag', help='List and create tags')\n",
+    "\n",
+    "argsp.add_argument('-a', action='store_true', dest='create_tag_object', help='Whether to create a tag object')\n",
+    "argsp.add_argument('name', nargs='?', help=\"New tag's name\")\n",
+    "argsp.add_argument('object', default='HEAD', nargs='?', help='The object the new tag will point to')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cmd_tag(args):\n",
+    "    repo = repo_find()\n",
+    "\n",
+    "    # If the argument name is passed, create an object\n",
+    "    if args.name:\n",
+    "        tag_create(repo, args.name, args.object, create_tag_object=args.create_tag_object)\n",
+    "\n",
+    "    # just list the tags if no name\n",
+    "    else:\n",
+    "        refs = ref_list(repo)\n",
+    "        show_ref(repo, refs['tags'], with_hash=False)\n",
+    "\n",
+    "\n",
+    "# Very similar to the commit create function we had above.\n",
+    "def tag_create(repo, name, ref, create_tag_object=False):\n",
+    "    # get the GitObject from the object reference\n",
+    "    sha = object_find(repo, ref)\n",
+    "\n",
+    "    if create_tag_object:\n",
+    "        # create tag object (commit)\n",
+    "        tag = GitTag()\n",
+    "        tag.kvlm = dict()\n",
+    "        tag.kvlm[b'object'] = sha.encode()\n",
+    "        tag.kvlm[b'type'] = b'commit'\n",
+    "        tag.kvlm[b'tag'] = name.encode()\n",
+    "        # Feel free to let the user give their name!\n",
+    "        # Notice you can fix this after commit, read on!\n",
+    "        tag.kvlm[b'tagger'] = b'Wyag <wyag@example.com>'\n",
+    "        # …and a tag message!\n",
+    "        tag.kvlm[None] = b\"A tag generated by wyag, which won't let you customize the message!\\n\"\n",
+    "        tag_sha = object_write(tag, repo)\n",
+    "        # create reference\n",
+    "        ref_create(repo, \"tags/\" + name, tag_sha)\n",
+    "    else:\n",
+    "        # create lightweight tag (ref)\n",
+    "        ref_create(repo, \"tags/\" + name, sha)\n",
+    "\n",
+    "def ref_create(repo, ref_name, sha):\n",
+    "    with open(repo_file(repo, \"refs/\" + ref_name), 'w') as fp:\n",
+    "        fp.write(sha + \"\\n\")"
    ]
   }
  ],
