--- a/play.ipynb
+++ b/play.ipynb
@@ -1180,7 +1180,7 @@
    "source": [
     "### Refs\n",
     "\n",
-    "We generally want to refer to commits by their branch name instead of a hash. So how do we do this? We maintain a mapping between the branch name and it's hash. These are references.\n",
+    "We generally want to refer to objects by some name ( e.g. commits by their branch name ) instead of a hash. So how do we do this? We maintain a mapping between the branch name and it's hash. These are references.\n",
     "\n",
     "Directories in the `.git/refs/` store the references. Refs are simple text files that contain hexadecimal representations in ASCII.\n",
     "\n",
@@ -1402,6 +1402,27 @@
     "def ref_create(repo, ref_name, sha):\n",
     "    with open(repo_file(repo, \"refs/\" + ref_name), 'w') as fp:\n",
     "        fp.write(sha + \"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Branches\n",
+    "\n",
+    "Branches are references to a commit. Branches live in `.git/refs/heads` directory. Branches refer specifically to commits ( and not to any other objects like tags ). More importantly, the refs in branches update with each commit!\n",
+    "\n",
+    "This is what happens when we do a commit:\n",
+    "1. A new commit object is created with current branch's SHA-1 as parent.\n",
+    "2. The commit object is hashed and stored.\n",
+    "3. The branch ref is updated to point to the new commit.\n",
+    "\n",
+    "So the refs in branches are updated with each commit. \n",
+    "\n",
+    "There's also a special branch called HEAD, which points to the *current* branch on which you are working.\n",
+    "\n",
+    "Can you guess what detached HEAD means and what might cause it?\n",
+    "\n"
    ]
   }
  ],
